Corrected double spacing in paragraphs in posts

--- a/css/src/style.scss
+++ b/css/src/style.scss
@@ -845,7 +845,7 @@ body .syntaxhighlighter textarea {
 
   p {
     line-height: 1.45;
-    margin: 0 0 20px;
+    margin: 0;
   }
 }
 
